[package]
name = "mathkid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
serde = { version = "1.0.144",  features = ["derive"] }
serde_json = "1.0.85"
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"
home = { version = "0.5.3" }
unidecode = "0.3.0"
itertools = "0.10.5"
